fix: body menu needed wrap-reverse

--- a/css/style.css
+++ b/css/style.css
@@ -474,7 +474,7 @@ body {
 .body-menu {
     display: flex;
     flex-direction: row-reverse;
-    flex-wrap: wrap;
+    flex-wrap: wrap-reverse;
     justify-content: center;
     gap: 20px;
     text-transform: uppercase;
